# gst-rebooter

./: .gitignore  CMakeLists.txt  README.md  contributing.md
message/common/: cmd.pb.cc  cmd.pb.h
protobuf/common/: cmd.proto
scripts/: cam0.sh  cam1.sh  cam2.sh  cam3.sh  cam4.sh  cam5.sh  cam6.sh  cam7.sh
src/: gst_rebooter.cpp
test/: send_cmd.cpp
